[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Objects/Portal.gd" type="Script" id=1]
[ext_resource path="res://sprites/Particles/Light32.png" type="Texture" id=3]
[ext_resource path="res://sprites/Objects/qiwi.png" type="Texture" id=4]
[ext_resource path="res://sounds/FX/zapsplat_cartoon_eat_crunch_bite_sinlge_mid_pitched_69411.mp3" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 0.0

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 0.757857, 2, 0.757857 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 0.757857, 2, 0.757857 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, -2 ) ]
}

[node name="Portal" type="Area2D"]
pause_mode = 1
collision_layer = 0
collision_mask = 16
monitorable = false
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
color = Color( 0.6, 0.898039, 0.313726, 1 )
energy = 1.1
mode = 2
range_layer_min = -1
range_item_cull_mask = 2
shadow_gradient_length = 1.3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="qiwi" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="qiwi"]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
bus = "FX"

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
